--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<head>
+<meta charset="UTF-8">
 <!--ilk baslik-->
 <h1>Büşra Örenli</h1>
 <!--ikinci baslik-->
@@ -18,3 +20,4 @@
 <h3>Seinfeld</h3>
 <p>İlk bölümü 1989'da yayınlanan sitcomdur.</p>
 <p>Bir arkadaş grubunun birkaç yerde geçen gündelik hayatını anlatan, konusu "hiçbir şey" olan dizidir.</p>
+</head>
