--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <head>
 <meta charset="UTF-8">
 <!--ilk baslik-->
+<a href="#footer">Sayfa sonuna git.</a>
 <h1>Büşra Örenli</h1>
 <!--ikinci baslik-->
 <h2>Hakkımda</h2>
@@ -14,10 +15,46 @@
     </ul>
 </p>
 <h2>Sevdiğim Diziler</h2>
-<h3>Friends</h3>
-<p>Bir arkadaş grubunun günlük yaşantısını anlatan bir sitcom</p>
-<p>10 sezondur. Ve her bölüm 20 dakikadır.</p>
-<h3>Seinfeld</h3>
-<p>İlk bölümü 1989'da yayınlanan sitcomdur.</p>
-<p>Bir arkadaş grubunun birkaç yerde geçen gündelik hayatını anlatan, konusu "hiçbir şey" olan dizidir.</p>
-</head>
+    <ul>
+    <li>
+        <h3><a href="https://www.imdb.com/title/tt0108778/">Friends</a></h3>
+        <p>Bir arkadaş grubunun günlük yaşantısını anlatan bir sitcom</p>
+        <p>10 sezondur. Ve her bölüm 20 dakikadır.</p>
+        <img src="https://m.media-amazon.com/images/M/MV5BNDVkYjU0MzctMWRmZi00NTkxLTgwZWEtOWVhYjZlYjllYmU4XkEyXkFqcGdeQXVyNTA4NzY1MzY@._V1_.jpg" title="friends fotoğrafı" alt="friends fotoğrafı" width="150" height="200"/>
+    
+        <br>
+    </li>
+    <li>
+        <h3>Seinfeld</h3>
+        <p>İlk bölümü 1989'da yayınlanan sitcomdur.</p>
+        <p>Bir arkadaş grubunun birkaç yerde geçen gündelik hayatını anlatan, konusu "hiçbir şey" olan dizidir.</p>
+        <img src="https://cdnntr1.img.sputniknews.com/img/104019/08/1040190804_0:11:2560:1458_1920x0_80_0_0_ec4093d93d8c44b5fbb7784f30bce512.jpg" title="seinfeld fotoğrafı" alt="seinfeld fotografi" width="250" height="200"/>
+    </li>
+    </ul>
+<h2>Sevdiğim Kitaplar</h2>
+<ul>
+    <strong><li>Nietzsche Ağladığında</li></strong>
+        <p>
+            Irvin D. Yalom tarafından yazılmış, ümitsizliği ve yanılsamaları konu alan bir düşünsel romandır. Roman, Nietzsche'nin hayatını ve düşüncesini, psikanaliz ile harmanlayarak anlatır. Romanın ortamı psikanalizin doğumu öncesinde olan 19.yüzyıl Viyana’sıdır.  
+        </p>
+        <img src="https://i.dr.com.tr/cache/500x400-0/originals/0000000065453-1.jpg" alt="Nietzche Ağladığında Kitabı" width="150" height="200">
+        <br>
+        <br>
+    <strong><li>
+        <a href="https://www.goodreads.com/tr/book/show/11079931-i-nsan-olmak" target="_blank">İnsan Olmak</a>
+    </li></strong>
+        <p>
+            İlk kez yayımlandığı 1983'ten günümüze defalarca baskı yapmış ve okurla kurduğu yapıcı ilişkiyi kanıtlamış olan bu kitabında Engin Geçtan insan olmanın ikilemini şöyle anlatır: "Çağdaş toplumlar kendine özgü bir olguyu da birlikte getirmiştir. İnsan eskisinden çok daha fazla sayıda insanla, çok daha kısa süreli, daha yüzeysel ilişkiler kurma eğilimindedir. Bu, soğuk bir günde karşılaşan bir grup kirpinin öyküsüne benzer. Kirpiler ısınabilmek için birbirlerine sokulurlar, ama dikenleri birbirine batar. Birbirlerinden ayrıldıklarındaysa soğuktan rahatsız olurlar. İleri geri hareket ederek sonunda dikenlerini batırmadan birbirlerini ısıtabilecekleri en uygun uzaklığı bulurlar."
+        </p>
+    
+</ul>
+<h2 id="footer"> Sevdiğim Filmler</h2>
+    <ol>
+        <li>
+            <a href="https://www.imdb.com/title/tt2584384/" target="_blank">Jojo Rabbit</a>
+        </li>
+        <li>Bir Başkadır</li>
+        <li>The Fisher King</li>
+    </ul>
+    <br>
+<a href="mailto:busraorenli56@gmail.com">İletişim</a>
